--- a/DMX G441/.vscode/settings.json
+++ b/DMX G441/.vscode/settings.json
@@ -3,6 +3,8 @@
         "main.h": "c",
         "stm32g4xx_hal.h": "c",
         "stm32g4xx.h": "c",
-        "stm32g441xx.h": "c"
-    }
+        "stm32g441xx.h": "c",
+        "string.h": "c"
+    },
+    "cmake.configureOnOpen": false
 }
