Some memory savings
Some terminal commands for emergency management
Persistent settings using a single flash page and Virtual Addressing

--- a/DMX G441/.vscode/settings.json
+++ b/DMX G441/.vscode/settings.json
@@ -4,7 +4,9 @@
         "stm32g4xx_hal.h": "c",
         "stm32g4xx.h": "c",
         "stm32g441xx.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "artnet.h": "c",
+        "flash_ee.h": "c"
     },
     "cmake.configureOnOpen": false
 }
