Adding initial WebUI support
- Removing serial interface completely

--- a/DMX_ArtNet/.vscode/settings.json
+++ b/DMX_ArtNet/.vscode/settings.json
@@ -7,7 +7,12 @@
         "string.h": "c",
         "artnet.h": "c",
         "flash_ee.h": "c",
-        "cdc_device.h": "c"
+        "cdc_device.h": "c",
+        "fs.h": "c",
+        "limits": "c",
+        "cmsis_armclang.h": "c",
+        "cmsis_armclang_ltm.h": "c",
+        "cmsis_gcc.h": "c"
     },
     "cmake.configureOnOpen": false
 }
