Fixed bug in initialization of first port
- All tests completed

--- a/DMX_ArtNet/.vscode/settings.json
+++ b/DMX_ArtNet/.vscode/settings.json
@@ -12,7 +12,8 @@
         "limits": "c",
         "cmsis_armclang.h": "c",
         "cmsis_armclang_ltm.h": "c",
-        "cmsis_gcc.h": "c"
+        "cmsis_gcc.h": "c",
+        "config.h": "c"
     },
     "cmake.configureOnOpen": false
 }
