--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "DMX G441/lwip"]
-	path = DMX G441/lwip
+[submodule "lwip"]
+	path = DMX_ArtNet/lwip
 	url = https://git.savannah.gnu.org/git/lwip.git
 	branch = STABLE-2_1_x
